static/css/main.css
/** Reset some basic elements */
body, h1, h2, h3, h4, h5, h6, p, blockquote, pre, hr, dl, dd, ol, ul, figure {
  margin: 0;
  padding: 0; 
}

/** Basic styling */
body {
  font-family: 'Inter', sans-serif;
  font-size: 28px;
  line-height: 140%;
  font-weight: normal;
  color: #F1F1F1;
  background-color: #1F2937;
  margin: 120px auto;
  padding: 0 32px;
}

h1, h2, h3, h4, h5, h6, p, blockquote, pre, ul, ol, dl, figure, .highlight {
  margin-bottom: 20px;
}

/** Images */
img {
  max-width: 100%;
  height: auto;
  vertical-align: middle;
}

/** Figures */
figure > img {
  display: block;
}

figcaption {
  font-size: 17.5px;
}

/** Lists */
ul, ol {
  margin-left: 30px;
}

li > ul, li > ol {
  margin-bottom: 0;
}

/** Headings */
h1, h2, h3, h4, h5, h6 {
  font-weight: bold;
}

h1, h1 a, h1 a:visited {
  font-size: 58px;
  line-height: 120%;
  color: #F1F1F1;
  text-decoration: none;
  letter-spacing: -.5px;
}

h3 {
  font-size: 18px;
  font-weight: bold;
  text-transform: uppercase;
  letter-spacing: 2px;
  color: #2a7ae2;
  margin: 0;
  display: inline-block;
}

/** Links */
a {
  color: #2a7ae2;
  text-decoration: none;
}

a:visited {
  color: #2a7ae2;
}

a:hover {
  color: #518cd9;
  text-decoration: underline;
}

/** Blockquotes */
blockquote {
  font-size: 28px;
  padding-left: 36px;
  color: #F1F1F1;
  margin: 32px 0 24px 0;
  border-left: 10px solid #2a7ae2;
}

blockquote > :last-child {
  margin-bottom: 0;
}

/** Code formatting */
pre, code {
  font-size: 15px;
  border: 1px solid #e8e8e8;
  border-radius: 3px;
  background-color: #eef;
}

code {
  padding: 1px 5px;
}

pre {
  padding: 8px 12px;
  overflow-x: scroll; 
}

pre > code {
  border: 0;
  padding-right: 0;
  padding-left: 0;
}

/** Wrapper */
.wrapper { 
  max-width: 900px;
  margin: 0 auto;
  padding: 0 32px;
}

@media screen and (max-width: 800px) { 
  .wrapper {
    max-width: -webkit-calc(800px - (30px));
    max-width: calc(800px - (30px));
    padding-right: 15px;
    padding-left: 15px; 
  }
}

/** Clearfix */
.wrapper:after, .footer-col-wrapper:after {
  content: "";
  display: table;
  clear: both; 
}

/** Icons */
.icon > svg {
  display: inline-block;
  width: 16px;
  height: 16px;
  vertical-align: middle;
}

.icon > svg path {
  fill: #828282;
}

/** Site header */
.site-header { 
}

img.site-image {
  border-radius: 100px;
  width: 100px;
  margin-bottom: 16px;
}

.site-title {
  font-size: 56px;
  letter-spacing: -.25px;
  margin: 0;
  color: #F1F1F1;
  text-decoration: none;
}

.site-title, .site-title:visited {
  color: #F1F1F1;
}

.navigation .page-link, .date, a.date, footer p, footer p a {
  font-family: 'Inconsolata', monospace;
  text-decoration: none;
  font-size: 18px;
  text-transform: uppercase;
  font-weight: bold;
  letter-spacing: 1px;
  color: #F1F1F150;
  margin-right: 18px;
}

.navigation .page-link:visited, a.date:visited, footer p a:visited {
  color: #F1F1F150;
}

footer p {
  margin: 0;
}

/** Site footer */
.site-footer {
  padding: 0;
}

.footer-heading { font-size: 18px; margin-bottom: 15px; }

.contact-list, .social-media-list { list-style: none; margin-left: 0; }

.footer-col-wrapper { font-size: 15px; color: #828282; margin-left: -15px; }

.footer-col { float: left; margin-bottom: 15px; padding-left: 15px; }

.footer-col-1 { width: -webkit-calc(35% - (30px / 2)); width: calc(35% - (30px / 2)); }

.footer-col-2 { width: -webkit-calc(20% - (30px / 2)); width: calc(20% - (30px / 2)); }

.footer-col-3 { width: -webkit-calc(45% - (30px / 2)); width: calc(45% - (30px / 2)); }

@media screen and (max-width: 800px) { .footer-col-1, .footer-col-2 { width: -webkit-calc(50% - (30px / 2)); width: calc(50% - (30px / 2)); }
  .footer-col-3 { width: -webkit-calc(100% - (30px / 2)); width: calc(100% - (30px / 2)); } }
@media screen and (max-width: 600px) { .footer-col { float: none; width: -webkit-calc(100% - (30px / 2)); width: calc(100% - (30px / 2)); } }
/** Page content */
.page-content {
  padding: 120px 0;
}

.page-content ul {
  margin-bottom: 0;
}

.post-list {
  margin-left: 0;
  list-style: none;
}

.post-list > li {
  margin-bottom: 120px;
}

li.h-entry:last-of-type {
  margin-bottom: 0px;
}

.post-link {
  display: block;
  font-size: 24px;
}

/** Posts */
.post-header {
  margin-bottom: 30px;
}

@media screen and (max-width: 800px) { .post-title { font-size: 26px; } }

h1 { font-size: 26px; margin-bottom: 0px; }

.post-content { margin-bottom: 30px; }
.post-content h2 { font-size: 24px; }
@media screen and (max-width: 800px) { .post-content h2 { font-size: 24px; } }
.post-content h3 { font-size: 22px; }
@media screen and (max-width: 800px) { .post-content h3 { font-size: 22px; } }
.post-content h4 { font-size: 20px; }
@media screen and (max-width: 800px) { .post-content h4 { font-size: 20px; } }

#post-nav {
  padding-top: 25px;
}

#post-nav .prev {
  padding-right: 10px;
}

video {
	max-width: 100%;
}

